--- a/public/screen.css
+++ b/public/screen.css
@@ -6,3 +6,129 @@ body {
   margin: 0;
   font: 16px / 1 sans-serif;
 }
+
+.header {
+  background-color: #ccc
+}
+
+.header .box {
+  display: flex;
+  justify-content: space-between;
+  max-width: 52em;
+  margin: 0 auto;
+  border-top: 5px solid red;
+}
+
+.header ul {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.box1 li {
+  display: flex;
+  list-style-type: none;
+  margin: 0 0.5em;
+}
+
+.box15 li {
+  display: flex;
+}
+
+.box2 h3 {
+  padding-right: 50px;
+}
+
+.body {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  width: 950px;
+  margin-top:55px;
+}
+
+.body h1 {
+  display: flex;
+  justify-content: center;
+  width: 350px;
+  height: 10px;
+}
+
+.body h4 {
+  display: flex;
+  width: 300px;
+  justify-content: center;
+  text-align: center;
+}
+
+.gallery {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 1000px;
+}
+
+.left-gallery ul{
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-start;
+  align-content: flex-start;
+  width: 479px;
+}
+
+.right-gallery ul{
+  padding-right: 20px;
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.footer {
+  display: flex;
+}
+
+.footer-left li{
+  list-style-type: none;
+}
+
+.footer-left h4{
+  color: red;
+  padding-top: 4px;
+}
+
+.footer-left ul{
+  display:flex;
+  flex-direction: column;
+  height: 227px;
+  justify-content: space-between;
+}
+
+.footer-right {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+  align-content: flex-start;
+  height: 100px;
+  width: 1100px;
+}
+
+.footer-right h4{
+  padding-top: 20px;
+  padding-left: 40px;
+  width: 200px;
+}
+
+.footer-right ul{
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+  width: 650px;
+}
